# beluga

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  audio_buffer.h  beluga.m.cpp  components.cpp  components.h  constants.h  envelope.h  helpers.h  instrument.cpp  instrument.h  noise_maker.cpp  noise_maker.h  olcNoiseMaker.h  sound_buffer.cpp  sound_buffer.h
